--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start:stage": "cross-env NODE_ENV=stage tsx src/index.ts",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "test": "ts-mocha",
+    "test:aws": "ts-mocha test/aws/**/*.test.ts",
     "prettier": "npx prettier --write src test"
   },
   "repository": {
@@ -20,6 +21,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ec2": "^3.879.0",
+    "@aws-sdk/client-pricing": "^3.879.0",
+    "@aws-sdk/client-sts": "^3.879.0",
+    "@aws-sdk/credential-providers": "^3.879.0",
     "config": "^3.3.11",
     "cross-env": "^7.0.3",
     "express": "^4.19.2"
@@ -29,7 +34,7 @@
     "@types/config": "^3.3.4",
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.19.11",
     "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
@@ -44,7 +49,8 @@
     "sinon": "^18.0.0",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tsx": "^4.10.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.2"
   }
 }
