feat: add AWS services integration with EC2 support
- Implement AWS services layer for better service organization
- Add EC2 service functionality with comprehensive test coverage
- Update package.json with new dependencies for AWS services
- Enhance .gitignore to exclude service-specific files
- Add test suite for EC2 service with mock implementations
- Improve service architecture for better scalability

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "test": "ts-mocha",
     "test:aws": "ts-mocha test/aws/**/*.test.ts",
+    "test:services": "ts-mocha test/services/**/*.test.ts",
+    "test:ec2": "node --loader ts-node/esm test-ec2.ts",
+    "test:ec2:detailed": "cross-env NODE_ENV=development tsx test-ec2-detailed.ts",
+    "test:ec2:cache": "cross-env NODE_ENV=development tsx test-ec2-cache.ts",
     "prettier": "npx prettier --write src test"
   },
   "repository": {
