--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "start": "cross-env NODE_ENV=development tsx src/index.ts",
     "start:stage": "cross-env NODE_ENV=stage tsx src/index.ts",
     "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
-    "test": "ts-mocha",
+    "test": "ts-mocha \"test/**/*.test.ts\"",
     "test:aws": "ts-mocha test/aws/**/*.test.ts",
     "test:services": "ts-mocha test/services/**/*.test.ts",
+    "test:integration": "ts-mocha test/integration/**/*.test.ts",
     "test:ec2": "node --loader ts-node/esm test-ec2.ts",
     "test:ec2:detailed": "cross-env NODE_ENV=development tsx test-ec2-detailed.ts",
     "test:ec2:cache": "cross-env NODE_ENV=development tsx test-ec2-cache.ts",
@@ -40,6 +41,7 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.19.11",
     "@types/sinon": "^17.0.3",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "chai": "^5.1.1",
@@ -51,6 +53,7 @@
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "sinon": "^18.0.0",
+    "supertest": "^7.1.4",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
