--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@aws-sdk/credential-providers": "^3.879.0",
     "config": "^3.3.11",
     "cross-env": "^7.0.3",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2"
   },
   "devDependencies": {
