feat: add automation scripts and cleanup tools
- Add cleanup script for automated system maintenance
- Implement comprehensive cleanup functionality with user feedback
- Add script utilities for development workflow automation
- Update package.json with new script dependencies
- Add automated cleanup processes for better system performance
- Implement user-friendly cleanup notifications and progress tracking
- Add development environment maintenance tools

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test:ec2": "node --loader ts-node/esm test-ec2.ts",
     "test:ec2:detailed": "cross-env NODE_ENV=development tsx test-ec2-detailed.ts",
     "test:ec2:cache": "cross-env NODE_ENV=development tsx test-ec2-cache.ts",
+    "demo": "bash scripts/demo.sh",
+    "cleanup": "bash scripts/cleanup.sh",
     "prettier": "npx prettier --write src test"
   },
   "repository": {
